授業風景編集

--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="chugaku.css">
-    <link rel="icon" href="/photo/logo.png">
+    <link rel="icon" href="../photo/logo.png">
     <meta name="description" content="JIRITSU LABO 咲Kids教室は定期テストや高校受験に向けて学力を向上させたい中学生の方におすすめの集団・個別の学習塾です。阪堺線「石津」駅 徒歩5分の学習塾。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
     <meta name="keywords" content="石津,堺,石津川,湊,浜寺,大浜,大阪,集団塾・個別指導塾・学習塾・進学塾・志望校対策・高校受験対策,中学生">
     <title>堺市の学習塾なら咲Kids教室|JIRITSU LABO 咲Kids教室</title>
@@ -14,21 +14,21 @@
 <body>
     <header>
         <h1>
-            <img src="/photo/chugakulogo.png" alt="JIRITU LABO 咲Kids教室">
+            <img src="../photo/chugakulogo.png" alt="JIRITU LABO 咲Kids教室">
         </h1>
         <nav class="headnav">
             <ul class="dropdown">
                 <li class="headmenu">
-                    <a href="/index.html" class="cantitle">ホーム</a>
+                    <a href="../index.html" class="cantitle">ホーム</a>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="/index.html">TOP</a>
+                            <a href="../index.html">TOP</a>
                         </li>
                         <li class="headmenu">
-                            <a href="/index.html#abroad">留学</a>
+                            <a href="../index.html#abroad">留学</a>
                         </li>
                         <li class="headmenu">
-                            <a href="/index.html#greeting">代表挨拶</a>
+                            <a href="../index.html#greeting">代表挨拶</a>
                         </li>
                     </ul>
                 </li>
@@ -39,10 +39,10 @@
                     <a href="#" class="cantitle">他のクラス</a>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="/shogaku/shogaku.html">小学生クラス</a>
+                            <a href="../shogaku/shogaku.html">小学生クラス</a>
                         </li>
                         <li class="headmenu">
-                            <a href="/shodo/shodo.html">書道クラス</a>
+                            <a href="../shodo/shodo.html">書道クラス</a>
                         </li>
                     </ul>
                 </li>
@@ -71,16 +71,16 @@
             <div class="menu">
                 <ul class="headmenu-list">
                     <li class="head-menu">
-                        <a href="/index.html">ホーム</a>
+                        <a href="../index.html">ホーム</a>
                     </li>
                     <li class="head-menu">
                         <a href="#lesson">Lesson内容</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/shogaku/shogaku.html">小学生クラス</a>
+                        <a href="../shogaku/shogaku.html">小学生クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/shodo/shodo.html">書道クラス</a>
+                        <a href="../shodo/shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
                         <a href="#reputation">授業風景</a>
@@ -89,7 +89,7 @@
                         <a href="#achievement">資格</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/index.html#greeting">代表挨拶</a>
+                        <a href="../index.html#greeting">代表挨拶</a>
                     </li>
                     <li class="head-menu">
                         <a href="#contact">お問い合わせ</a>
@@ -101,7 +101,7 @@
     <main>
         <!-- キャッチコピー -->
         <div class="slogandiv">
-            <img src="/photo/chugaku1.jpeg">
+            <img src="../photo/chugaku1.jpeg">
             <h2 class="slogan">
                 英語を通して<span>人間力</span>を育てる
             </h2>
@@ -123,11 +123,9 @@
         </section>
         <section class="scenery">
             <h2 id="reputation">授業風景</h2>
-            <img src="/photo/chugaku1.jpeg" alt="lesson">
-            <img src="/photo/chugaku2.jpg" alt="lesson">
-            <img src="/photo/chugaku3.jpg" alt="lesson">
-            <img src="/photo/chugaku4.jpg" alt="lesson">
-            <img src="/photo/chugaku5.jpg" alt="lesson">
+            <img src="../photo/chugaku1.jpeg" alt="lesson">
+            <img src="../photo/chugaku2.jpg" alt="lesson">
+            <img src="../photo/chugaku3.jpg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
@@ -142,7 +140,7 @@
             <div class="inline">
                 <div class="contact">
                     <dl class="phonenumber">
-                        <dd><img src="/photo/phone.svg" alt="電話番号"></dd>
+                        <dd><img src="../photo/phone.svg" alt="電話番号"></dd>
                         <dt>090 - 3866 - 8049</dt>
                     </dl>
                     <div class="formdiv"><a class="form_main" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a></div>
@@ -151,7 +149,7 @@
                         <p>下記のQRコードからお気軽にご連絡ください。</p>
                         <p class="tap">(読み取れない場合はタップしてください）</p>
                         <a href="https://line.me/ti/p/wg7LPOKn9I">
-                            <img src="/photo/LINE.jpg" alt="LINE">
+                            <img src="../photo/LINE.jpg" alt="LINE">
                         </a>
                     </div>
                     <dl class="adress">
@@ -168,7 +166,7 @@
         <nav>
             <ul>
                 <li class="footmenu">
-                    <a href="/index.html">ホーム</a>
+                    <a href="..index.html">ホーム</a>
                 </li>
                 <li class="footmenu">
                     <a href="#lesson">Lesson内容</a>
@@ -176,10 +174,10 @@
             </ul>
             <ul class="classnav">
                 <li class="footmenu">
-                    <a href="/shogaku/shogaku.html">小学生クラス/</a>
+                    <a href="../shogaku/shogaku.html">小学生クラス/</a>
                 </li>
                 <li class="footmenu">
-                    <a href="/shodo/shodo.html">書道クラス</a>
+                    <a href="../shodo/shodo.html">書道クラス</a>
                 </li>
             </ul>
             <ul>
@@ -190,7 +188,7 @@
                     <a href="#achievement">資格</a>
                 </li>
                 <li class="footmenu">
-                    <a href="/index.html#greeting">代表挨拶</a>
+                    <a href="../index.html#greeting">代表挨拶</a>
                 </li>
                 <li class="footmenu">
                     <a href="#contact">お問い合わせ</a>
@@ -199,6 +197,6 @@
         </nav>
         <small>&copy;2022 咲Kids教室</small>   
     </footer>
-    <script src="/main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
