--- a/shogaku/shogaku.html
+++ b/shogaku/shogaku.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="shogaku.css">
-    <link rel="icon" href="/photo/logo.png">
+    <link rel="icon" href="../photo/logo.png">
     <meta name="description" content="JIRITSU LABO 咲Kids教室は小学生から英会話を習わせたい方におすすめの英会話教室です。阪堺線「石津」駅 徒歩5分の英会話教室。堺市西区浜寺石津町東3-4-19。堺市堺区出島町2-6-1 湊団地自治会館">
     <meta name="keywords" content="石津,堺,石津川,大阪,英会話,英会話教室,英検,英検対策,学習塾,小学生">
     <title>堺市で小学生から英会話を始めるなら咲Kids教室|JIRITSU LABO 咲Kids教室</title>
@@ -14,21 +14,21 @@
 <body>
     <header>
         <h1>
-            <img src="/photo/shogakulogo.png" alt="JIRITU LABO 咲Kids教室">
+            <img src="../photo/shogakulogo.png" alt="JIRITU LABO 咲Kids教室">
         </h1>
         <nav class="headnav">
             <ul class="dropdown">
                 <li class="headmenu">
-                    <a href="/index.html" class="cantitle">ホーム</a>
+                    <a href="../index.html" class="cantitle">ホーム</a>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="/index.html">TOP</a>
+                            <a href="../index.html">TOP</a>
                         </li>
                         <li class="headmenu">
-                            <a href="/index.html#abroad">留学</a>
+                            <a href="../index.html#abroad">留学</a>
                         </li>
                         <li class="headmenu">
-                            <a href="/index.html#greeting">代表挨拶</a>
+                            <a href="../index.html#greeting">代表挨拶</a>
                         </li>
                     </ul>
                 </li>
@@ -39,10 +39,10 @@
                     <a href="#" class="cantitle">他のクラス</a>
                     <ul class="can">
                         <li class="headmenu">
-                            <a href="/chugaku/chugaku.html">中学生クラス</a>
+                            <a href="../chugaku/chugaku.html">中学生クラス</a>
                         </li>
                         <li class="headmenu">
-                            <a href="/shodo/shodo.html">書道クラス</a>
+                            <a href="../shodo/shodo.html">書道クラス</a>
                         </li>
                     </ul>
                 </li>
@@ -71,16 +71,16 @@
             <div class="menu">
                 <ul class="headmenu-list">
                     <li class="head-menu">
-                        <a href="/index.html">ホーム</a>
+                        <a href="../index.html">ホーム</a>
                     </li>
                     <li class="head-menu">
                         <a href="#lesson">Lesson内容</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/chugaku/chugaku.html">中学生クラス</a>
+                        <a href="../chugaku/chugaku.html">中学生クラス</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/shodo/shodo.html">書道クラス</a>
+                        <a href="../shodo/shodo.html">書道クラス</a>
                     </li>
                     <li class="head-menu">
                         <a href="#reputation">授業風景</a>
@@ -89,7 +89,7 @@
                         <a href="#achievement">資格</a>
                     </li>
                     <li class="head-menu">
-                        <a href="/index.html#greeting">代表挨拶</a>
+                        <a href="../index.html#greeting">代表挨拶</a>
                     </li>
                     <li class="head-menu">
                         <a href="#contact">お問い合わせ</a>
@@ -100,7 +100,7 @@
     </header>
     <main>
         <div class="slogandiv">
-            <img src="/photo/shogaku1.JPG" alt="小学生">
+            <img src="../photo/shogaku1.JPG" alt="小学生">
             <h2 class="slogan">英語を通して<span>人間力</span>を育てる</h2>
         </div>
         <section class="lesson">
@@ -121,42 +121,26 @@
         </section>
         <section class="scenery">
             <h2 id="reputation">授業風景</h2>
-            <img src="/photo/shogaku1.jpg" alt="lesson">
-            <img src="/photo/shogaku2.jpg" alt="lesson">
-            <img src="/photo/shogaku3.jpg" alt="lesson">
-            <img src="/photo/shogaku4.jpg" alt="lesson">
-            <img src="/photo/shogaku5.jpg" alt="lesson">
-            <img src="/photo/shogaku6.jpg" alt="lesson">
-            <img src="/photo/shogaku7.jpg" alt="lesson">
-            <img src="/photo/shogaku8.jpg" alt="lesson">
-            <img src="/photo/shogaku9.jpg" alt="lesson">
-            <img src="/photo/shogaku10.jpg" alt="lesson">
-            <img src="/photo/shogaku11.jpg" alt="lesson">
-            <img src="/photo/shogaku12.jpg" alt="lesson">
-            <img src="/photo/shogaku13.jpg" alt="lesson">
-            <img src="/photo/shogaku14.jpg" alt="lesson">
-            <img src="/photo/shogaku15.jpg" alt="lesson">
-            <img src="/photo/shogaku16.jpg" alt="lesson">
-            <img src="/photo/shogaku17.jpg" alt="lesson">
-            <img src="/photo/shogaku18.jpg" alt="lesson">
-            <img src="/photo/shogaku19.jpg" alt="lesson">
-            <img src="/photo/shogaku20.jpg" alt="lesson">
-            <img src="/photo/shogaku21.jpg" alt="lesson">
-            <img src="/photo/shogaku22.jpg" alt="lesson">
-            <img src="/photo/shogaku23.jpg" alt="lesson">
-            <img src="/photo/shogaku24.jpg" alt="lesson">
-            <img src="/photo/shogaku25.jpg" alt="lesson">
-            <img src="/photo/shogaku26.jpg" alt="lesson">
-            <img src="/photo/shogaku27.jpg" alt="lesson">
-            <img src="/photo/shogaku28.jpg" alt="lesson">
-            <img src="/photo/shogaku29.jpg" alt="lesson">
-            <img src="/photo/shogaku30.jpg" alt="lesson">
-            <img src="/photo/shogaku31.jpg" alt="lesson">
-            <img src="/photo/shogaku32.jpg" alt="lesson">
-            <img src="/photo/shogaku33.jpg" alt="lesson">
-            <img src="/photo/shogaku34.jpg" alt="lesson">
-            <img src="/photo/shogaku35.jpg" alt="lesson">
-            <img src="/photo/shogaku36.jpg" alt="lesson">
+            <img src="../photo/shogaku1.jpg" alt="lesson">
+            <img src="../photo/shogaku2.jpg" alt="lesson">
+            <img src="../photo/shogaku3.jpg" alt="lesson">
+            <img src="../photo/shogaku4.jpg" alt="lesson">
+            <img src="../photo/shogaku6.jpg" alt="lesson">
+            <img src="../photo/shogaku7.jpg" alt="lesson">
+            <img src="../photo/shogaku8.jpg" alt="lesson">
+            <img src="../photo/shogaku9.jpg" alt="lesson">
+            <img src="../photo/shogaku10.jpg" alt="lesson">
+            <img src="../photo/shogaku11.jpg" alt="lesson">
+            <img src="../photo/shogaku13.jpg" alt="lesson">
+            <img src="../photo/shogaku14.jpg" alt="lesson">
+            <img src="../photo/shogaku17.jpg" alt="lesson">
+            <img src="../photo/shogaku22.jpg" alt="lesson">
+            <img src="../photo/shogaku24.jpg" alt="lesson">
+            <img src="../photo/shogaku25.jpg" alt="lesson">
+            <img src="../photo/shogaku26.jpg" alt="lesson">
+            <img src="../photo/shogaku30.jpg" alt="lesson">
+            <img src="../photo/shogaku35.jpg" alt="lesson">
+            <img src="../photo/shogaku36.jpg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
@@ -171,7 +155,7 @@
             <div class="inline">
                 <div class="contact">
                     <dl class="phonenumber">
-                        <dd><img src="/photo/phone.svg" alt="電話番号"></dd>
+                        <dd><img src="../photo/phone.svg" alt="電話番号"></dd>
                         <dt>090 - 3866 - 8049</dt>
                     </dl>
                     <div class="formdiv"><a class="form_main" href="https://docs.google.com/forms/d/e/1FAIpQLScD0C_W_-_teGDYXqfrZKSlomXD1L1C2xfjJ313BFCf_4sfQA/viewform?usp=sf_link">無料体験・入塾申し込み</a></div>
@@ -180,7 +164,7 @@
                         <p>下記のQRコードからお気軽にご連絡ください。</p>
                         <p class="tap">(読み取れない場合はタップしてください）</p>
                         <a href="https://line.me/ti/p/wg7LPOKn9I">
-                            <img src="/photo/LINE.jpg" alt="LINE">
+                            <img src="../photo/LINE.jpg" alt="LINE">
                         </a>
                     </div>
                     <dl class="adress">
@@ -197,7 +181,7 @@
         <nav>
             <ul>
                 <li class="footmenu">
-                    <a href="/index.html">ホーム</a>
+                    <a href="../index.html">ホーム</a>
                 </li>
                 <li class="footmenu">
                     <a href="#lesson">Lesson内容</a>
@@ -205,10 +189,10 @@
             </ul>
             <ul class="classnav">
                 <li class="footmenu">
-                    <a href="/chugaku/chugaku.html">中学生クラス/</a>
+                    <a href="../chugaku/chugaku.html">中学生クラス/</a>
                 </li>
                 <li class="footmenu">
-                    <a href="/shodo/shodo.html">書道クラス</a>
+                    <a href="../shodo/shodo.html">書道クラス</a>
                 </li>
             </ul>
             <ul>
@@ -219,7 +203,7 @@
                     <a href="#achievement">資格</a>
                 </li>
                 <li class="footmenu">
-                    <a href="/index.html#greeting">代表挨拶</a>
+                    <a href="../index.html#greeting">代表挨拶</a>
                 </li>
                 <li class="footmenu">
                     <a href="#contact">お問い合わせ</a>
@@ -228,6 +212,6 @@
         </nav>
         <small>&copy;2022 咲Kids教室</small>
     </footer>
-    <script src="/main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
