経営理念修正

--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -166,7 +166,7 @@
         <nav>
             <ul>
                 <li class="footmenu">
-                    <a href="..index.html">ホーム</a>
+                    <a href="../index.html">ホーム</a>
                 </li>
                 <li class="footmenu">
                     <a href="#lesson">Lesson内容</a>
