--- a/index.html
+++ b/index.html
@@ -104,14 +104,22 @@
         <!-- 内容 -->
         <section class="introduction">
             <h2 id="introduction">教室理念</h2>
-            <p>親目線で「愛情」を持って子供に接する。
-                挨拶、礼儀徹底
-                皆で向上していける相乗効果を出す雰囲気作り
-                正解のない時代に「自分が出来ることを見つけ、夢を掴む力」を育む
-                成功体験が出来る場を作り、自信と経験による定着をさせていく
-                自ら目標設定し、自主性を養っていく
-                
-                礼儀、挑戦する勇気、集中力、諦めない、自主性をつける＝「<span>人間力</span>」を育む。</p>
+            <p><strong>これからの時代を生き抜くための「<span>人間力</span>」の育成</strong></p>
+            <div>
+                <dl>
+                    <dt>○人間力を構成する要素</dt>
+                    <dt><strong>1.礼儀</strong></dt>
+                    <dd>ー生きていく上で必ず必要とされる挨拶などの礼儀についても指導。</dd>
+                    <dt><strong>2.変化の激しい時代に「夢を掴む力」</strong></dt>
+                    <dd>ー自らの目標に向かって行動する自主性を身につけ、目標を達成する力を養う。</dd>
+                    <dt><strong>3.挑戦する勇気</strong></dt>
+                    <dd>ー成功体験から自信をつけられる環境を作り、挑戦する勇気を養う。</dd>
+                    <dt><strong>4.集中力</strong></dt>
+                    <dd>ー目標に向かって最大限の力を発揮するための集中力を養う。</dd>
+                    <dt><strong>5.最後までやり抜く力</strong></dt>
+                    <dd>ー将来の夢や目標に向かって最後まで諦めずにやり抜く力を養う。</dd>
+                </dl>
+            </div>
             <img src="photo/lesson2.jpg" alt="資料2">
             <img src="photo/lesson1.jpg" alt="資料1">
         </section>
@@ -125,7 +133,7 @@
                         </div>
                         <div class="classdiv2">
                             <h3>小学生クラス</h3>
-                            <p>小学生クラスでは論理的思考（言いたい事をまとめる力）と話すメンタル（話す勇気、積極性）から養っていきます。自分の意見が上手く伝えらなかったり、シャイな子供達もどんどん意見を言えるように育てていき、英語を通して、小学生の間から社会でも役立つ「<span>人間力・自主性</span>」を英語を通して養っていきます。</p>
+                            <p>小学生クラスでは論理的思考（言いたい事をまとめる力）と話すメンタル（話す勇気、積極性）から養っていきます。自分の意見が上手く伝えらなかったり、シャイな子供達もどんどん意見を言えるように育てていき、英語を通して小学生の間から社会でも役立つ「<span>人間力・自主性</span>」を養っていきます。</p>
                         </div>
                     </div>
                     <p class="link">小学生ページはこちらから</p>
@@ -149,7 +157,7 @@
                         </div>
                         <div class="classdiv2">
                             <h3>書道クラス</h3>
-                            <p>書道クラスでは文字を書くことに専念することで「<span>集中力・忍耐力・観察力</span>」を高めます。書道以外でも生きていく上で必要な力、限界からもう１歩(もう１枚の作品を仕上げる)進めることで、能力キャパを広げ実力発揮力を養います。子供は気持ちのコントロール、大人はマインドフルネスを試みて気持ちをリセットし、また<span>自分の教室を持てるまで</span>指導していきます。</p>
+                            <p>書道クラスでは文字を書くことに専念することで「<span>集中力・忍耐力・観察力</span>」を高めます。書道以外でも生きていく上で必要な力、限界からもう１歩(もう１枚の作品を仕上げる)踏み出すことで、能力キャパを広げ実力発揮力を養います。子供は気持ちのコントロール、大人はマインドフルネスを試みて気持ちをリセットし、また<span>自分の教室を持てるまで</span>指導していきます。</p>
                         </div>
                     </div>
                     <p class="link">書道ページはこちらから</p>
@@ -198,8 +206,7 @@
                 <div>
                     <h4>代表挨拶</h4>
                     <p>ホームページをご覧頂きありがとうございます。</p>
-                    <p>私は子供が大好きで、この仕事を始めました。</p>
-
+                    <p>JIRITSU LABO 咲Kids教室 代表の崎原 薫と申します。<br>私は子供が大好きで、この仕事を始めました。</p>
                     <p>この教室は「咲kids」の名の通り、子供達がどんな世の中や状況になっても自ら花を咲かせるように逞しく育って欲しいという願いからつけました。</p>
                     <p>子供達はたくさんの人の愛情に触れることで豊かに真っ直ぐ育ちます。そのため私は我が子のように愛情を持って子供達と接しています。</p>
 
