代表挨拶修正

--- a/chugaku/chugaku.html
+++ b/chugaku/chugaku.html
@@ -101,7 +101,7 @@
     <main>
         <!-- キャッチコピー -->
         <div class="slogandiv">
-            <img src="../photo/chugaku1.jpeg">
+            <img src="../photo/chugaku4.jpg">
             <h2 class="slogan">
                 英語を通して<span>人間力</span>を育てる
             </h2>
@@ -126,6 +126,9 @@
             <img src="../photo/chugaku1.jpeg" alt="lesson">
             <img src="../photo/chugaku2.jpg" alt="lesson">
             <img src="../photo/chugaku3.jpg" alt="lesson">
+            <img src="../photo/chugaku4.jpg" alt="lesson">
+            <img src="../photo/chugaku5.jpeg" alt="lesson">
+            <img src="../photo/chugaku6.jpeg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
