--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="slogandiv">
             <div class="slide">
                 <img src="photo/shogaku1.JPG" alt="小学生">
-                <img src="photo/chugaku1.jpeg" alt="中学生">
+                <img src="photo/chugaku4.jpg" alt="中学生">
                 <img src="photo/shodo1.JPG" alt="書道">
             </div>
             <h2 class="slogan">英語・英会話&#x2613;書道を通して<br><span>人間力</span>を育てる</h2>
@@ -141,11 +141,11 @@
                 <a href="chugaku/chugaku.html">
                     <div>
                         <div class="classdiv">
-                            <img src="photo/chugaku1.jpeg" alt="中学生">
+                            <img src="photo/chugaku4.jpg" alt="中学生">
                         </div>
                         <div class="classdiv2">
                             <h3>中学生クラス</h3>
-                            <p>中学生クラスでは1年生から高校受験に向けた指導を行なっています。1年生の早いうちから受験を意識して学習に取り組んでもらうことで目標に向かって突き進む力を養っていきます。また、勉強への取り組み方だけでなく、みんなの前に出て生徒自らが説明することで理解を深めると同時に人に伝える力を養っていきます。高校受験を通過点として生徒たちにとって必要な<span>マインド</span>を伝えていきます。</p>
+                            <p>中学生クラスでは講師1人に対して生徒2~3人の割合を目安にして<strong>集団塾と個別指導塾の中間</strong>に当たる独自のスタイルで授業を行なっています。また、勉強への取り組み方だけでなく、みんなの前に出て生徒自らが説明することで理解を深めると同時に人に伝える力を養っていきます。高校受験を通過点として生徒たちにとって必要な<span>マインド</span>を伝えていきます。</p>
                         </div>
                     </div>
                     <p class="link">中学生ページはこちらから</p>
@@ -157,7 +157,7 @@
                         </div>
                         <div class="classdiv2">
                             <h3>書道クラス</h3>
-                            <p>書道クラスでは文字を書くことに専念することで「<span>集中力・忍耐力・観察力</span>」を高めます。書道以外でも生きていく上で必要な力、限界からもう１歩(もう１枚の作品を仕上げる)踏み出すことで、能力キャパを広げ実力発揮力を養います。子供は気持ちのコントロール、大人はマインドフルネスを試みて気持ちをリセットし、また<span>自分の教室を持てるまで</span>指導していきます。</p>
+                            <p>書道クラスでは文字を書くことに専念することで「<span>集中力・忍耐力・観察力</span>」を高めます。書道以外でも生きていく上で必要な力、限界からもう１歩(もう１枚の作品を仕上げる)踏み出すことで、能力キャパを広げ実力発揮力を養います。子供は気持ちのコントロール、大人はマインドフルネスを試みます。さらに<span>自分の教室を持てるまで</span>指導していきます。</p>
                         </div>
                     </div>
                     <p class="link">書道ページはこちらから</p>
@@ -206,13 +206,11 @@
                 <div>
                     <h4>代表挨拶</h4>
                     <p>ホームページをご覧頂きありがとうございます。</p>
-                    <p>JIRITSU LABO 咲Kids教室 代表の崎原 薫と申します。<br>私は子供が大好きで、この仕事を始めました。</p>
+                    <p>JIRITSU LABO 咲Kids教室 代表の崎原 薫と申します。</p>
                     <p>この教室は「咲kids」の名の通り、子供達がどんな世の中や状況になっても自ら花を咲かせるように逞しく育って欲しいという願いからつけました。</p>
-                    <p>子供達はたくさんの人の愛情に触れることで豊かに真っ直ぐ育ちます。そのため私は我が子のように愛情を持って子供達と接しています。</p>
-
-                    <p>今はだれもが英語を学ぶ時代です。しかし英語はあくまで生きていく上で必要なツールにすぎません。英語を学ぶことを目標とせず、その先の子供達の未来を見据えて今何が必要か？　書道では綺麗な字を書くこと以外に何が得られるのか？　そんなことを常に考えながら楽しく元気にレッスンを行い、子供達が帰る頃には来た時よりも笑顔で元気に帰れるような、そんな教室を心掛けています。</p>
-
-                    <p>英語も書道も第一に「継続力」です。継続して初めて身につくものです。出来ることをどんどん増やせる場を目指して進化し続けていきます。</p>
+                    <p>グローバル化やAIの進化、終身雇用の崩壊などの変化の激しい現代ではこれまでよりも英語力が必須になってきました。それに伴い2020年には小学校指導要領に「外国語」が追加されました。また、多様性などにより「<strong>自分らしく生きる</strong>」ということを大切にする人もかなり多くなってきています。その為、当教室では「これからの時代を生き抜くための<strong>人間力</strong>の育成」を理念とし、英語と書道を通して英語力と自分らしく生きる<strong>人間力</strong>の両方を育てます。</p>
+                    <p>中学生クラスでは<strong>集団塾</strong>と<strong>個別指導塾</strong>の中間に当たる独自のスタイルで授業を行なっています。そのため、生徒の1人1人のペースに合わせながらも切磋琢磨できる環境を実現しています。そして生徒自身が説明する機会を作り、説明する力も育成しています。</p>
+                    <p>最後に、咲Kids教室はこれからも人間力の育成に力を入れて指導していきますので、少しでも興味を持たれましたら当ページに用意しているGoogleフォームから<strong>無料体験授業</strong>にお気軽にお申し込みください。皆様に会えることを楽しみにお待ちしております。</p>
                 </div>
             </div>
         </section>
