--- a/shodo/shodo.html
+++ b/shodo/shodo.html
@@ -124,6 +124,7 @@
             <img src="../photo/shodo4.jpg" alt="lesson">
             <img src="../photo/shodo5.jpg" alt="lesson">
             <img src="../photo/shodo6.jpg" alt="lesson">
+            <img src="../photo/shodo7.jpg" alt="lesson">
         </section>
         <section class="achievement">
             <h2 id="achievement">資格</h2>
